# BootCamp-Cybersecurity

./: README.md
CTF LevelUp/: README.md
CTF Splunk/: README.md
Python_Module_00/: README.md
Python_Module_00/ex00/: answers.txt  requirements.txt
Python_Module_00/ex01/: exec.py
Python_Module_00/ex02/: whois.py
Python_Module_00/ex03/: count.py
Python_Module_00/ex04/: operations.py
Python_Module_00/ex05/: kata00.py  kata01.py  kata02.py  kata03.py  kata04.py
Python_Module_00/ex06/: recipe.py
Python_Module_00/ex07/: filterwords.py
Python_Module_00/ex08/: sos.py
Python_Module_00/ex09/: guess.py
Python_Module_00/ex10/: loading.py
Python_Module_01/: README.md
Python_Module_01/ex00/: book.py  recipe.py
Python_Module_01/ex01/: game.py
Python_Module_02/: README.md
Python_Module_02/ex04/: README.md  build.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py
arachnida/: README.md  requirements.txt  scorpion  spider
coRSAir/: Makefile  README.md  corsair.c
extraction/: README.md  extraction.py  requirements.txt
ft_blockchain/: README.md  ft_blockchain.py  requirements.txt
ft_onion/: Dockerfile  README.md  index.html  nginx.conf  sshd_config  style.css  torrc
ft_otp/: README.md  ft_otp  key.hex  requirements.txt
inquisitor/: README.md  inquisitor.py
iron_dome/: README.md  irondome.py
recovery/: README.md  recovery.py  requirements.txt
stockholm/: README.md  stockholm.py
tsunami/: README.md  code_vulnerability.c  env.sh  tsunami.c
vaccine/: README.md  payloads.py  requirements.txt  vaccine.py
web/: private_key  site.conf
(+26 files in other folders)
