[metadata]
name = my_minipack
version = 1.0.1
description = "A small example package called my_minipack"
url = "https://github.com/cherrero42"
author = cherrero
author_email = cherrero@student.42.fr
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: GPLv3 License
    Operating System :: OS Independent

[options]
package_dir = my_minipack
packages = find:
python_requires = >=3.7
include_package_data = True

[options.packages.find]
where = ./src/my_minipack
